Almost done working needs polishing